# $Id$

2007-04-14	Anton E. Lebedevich
	
	* main/Flow/MultiPrefixPhpViewResolver.class.php: added resolver for
	multiple prefixes.

2007-04-13	Denis M. Gabaidulin

	* main/Criteria/Criteria.class.php: dropProjection() added.

	* meta/classes/MetaConfiguration.class.php: toXsd()
	make correct xml-document now.

2007-04-12	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: downFirst() added.

	* main/Utils/LogicUtils.class.php: getOpenPoint() added.

2007-04-12	Denis M. Gabaidulin

	* meta/patterns/DtoClassPattern.class.php,
	meta/builders/DtoClassBuilder.class.php: dto classes pattern started.

2007-04-11	Denis M. Gabaidulin

	* meta/classes/MetaConfiguration.class.php: toXsd() convertes it
	to xsd-schema; experimental feature.

2007-04-09	Ivan Y. Khvostishkov

	* core/Base/Timestamp.class.php: toISOString() convertes it according to
	ISO 8601 standard.

	* core/Form/MappedForm.class.php: fixed ability to add more than one
	source for primitive.

	* core/Form/FormUtils.class.php: fixed object2form() for non-prototyped
	objects.

2007-04-08	Dmitry E. Demidov

	* main/Flow/RedirectView.class.php,
	main/Flow/RedirectToView.class.php: change visibility of getUrl 
	to public.
	
2007-04-06	Ivan Y. Khvostishkov

	* main/Base/RequestType.class.php: added ability to import data from
	attached vars.

2007-04-04	Konstantin V. Arkhipov

	* meta/: syntax checking now off by default, use --syntax-check to
	enable it.

2007-04-03	Konstantin V. Arkhipov

	* meta/types/PasswordType.class.php: bye.

	* meta/: LazyOneToOne relation dropped, you can use
	'relation="OneToOne" fetch="lazy"' instead.

	* meta/: read-only includes implemented via 'build="false"' option.

	* meta/: --dry-run mode added.

2007-04-02	Konstantin V. Arkhipov

	* meta/internal.xml: new internal classes added - IdentifiableObject,
	NamedObject, IndetifiableTree, NamedTree.

2007-04-01	Konstantin V. Arkhipov

	* meta/: internal classes implementation finished.
