@@ -1,5 +1,10 @@
 # $Id$
 
+2007-04-14	Konstantin V. Arkhipov
+
+	* core/OSQL/DBTable.class.php: now respect's column size during diff,
+	if any.
+
 2007-04-14	Anton E. Lebedevich
 	
 	* main/Flow/MultiPrefixPhpViewResolver.class.php: added resolver for
